--- a/news-app/package.json
+++ b/news-app/package.json
@@ -23,14 +23,17 @@
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-web": "^0.21.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.9",
     "eas-cli": "^16.31.0",
