--- a/backend/config.env
+++ b/backend/config.env
@@ -7,3 +7,26 @@ PORT=3001
 NODE_ENV=development
 CORS_ORIGIN="http://localhost:8081"
 N8N_WEBHOOK_SECRET="dailydigest-n8n-webhook-secret"
+
+# App URLs
+APP_URL="http://localhost:3001"
+WEB_URL="http://localhost:8081"
+APP_SCHEME="dailydigest"
+
+# Google OAuth (get from https://console.cloud.google.com)
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALLBACK_URL="http://localhost:3001/api/auth/google/callback"
+
+# Apple OAuth (get from https://developer.apple.com)
+APPLE_CLIENT_ID=""
+APPLE_TEAM_ID=""
+APPLE_KEY_ID=""
+APPLE_PRIVATE_KEY=""
+APPLE_CALLBACK_URL="http://localhost:3001/api/auth/apple/callback"
+
+# AWS SES (for email verification)
+AWS_REGION="us-east-1"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+AWS_SES_FROM_EMAIL="noreply@yourdomain.com"
