--- a/news-app/package.json
+++ b/news-app/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/stack": "^7.6.14",
     "axios": "^1.13.2",
-    "expo": "~54.0.31",
+    "expo": "^54.0.33",
+    "expo-apple-authentication": "^8.0.8",
+    "expo-auth-session": "^7.0.10",
     "expo-blur": "^15.0.8",
+    "expo-crypto": "^15.0.8",
     "expo-font": "^14.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
+    "expo-web-browser": "^15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
