--- a/backend/config.env
+++ b/backend/config.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://dailydigest:dailydigest123@localhost:5432/dailydigest?schema=public"
+DATABASE_URL="postgresql://postgres.qswpgnzqcdaodslqnlgx:DailyDigest-postgres@aws-1-ap-south-1.pooler.supabase.com:5432/postgres?pgbouncer=true&sslmode=require"
 JWT_SECRET="change-me-in-production"
 JWT_EXPIRES_IN="7d"
 # Port 3000 is used by a VSCode IBM DB2 extension service on this machine.
