--- a/backend/config.env
+++ b/backend/config.env
@@ -1,29 +1,28 @@
 DATABASE_URL="postgresql://postgres.qswpgnzqcdaodslqnlgx:DailyDigest-postgres@aws-1-ap-south-1.pooler.supabase.com:5432/postgres?pgbouncer=true&sslmode=require"
 JWT_SECRET="change-me-in-production"
 JWT_EXPIRES_IN="7d"
-# Port 3000 is used by a VSCode IBM DB2 extension service on this machine.
-# Use 3001 for the DailyDigest backend to avoid conflicts.
-PORT=3001
+# Backend port
+PORT=3000
 NODE_ENV=development
 CORS_ORIGIN="http://localhost:8081"
 N8N_WEBHOOK_SECRET="dailydigest-n8n-webhook-secret"
 
 # App URLs
-APP_URL="http://localhost:3001"
+APP_URL="http://localhost:3000"
 WEB_URL="http://localhost:8081"
 APP_SCHEME="dailydigest"
 
 # Google OAuth (get from https://console.cloud.google.com)
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
-GOOGLE_CALLBACK_URL="http://localhost:3001/api/auth/google/callback"
+GOOGLE_CALLBACK_URL="http://localhost:3000/api/auth/google/callback"
 
 # Apple OAuth (get from https://developer.apple.com)
 APPLE_CLIENT_ID=""
 APPLE_TEAM_ID=""
 APPLE_KEY_ID=""
 APPLE_PRIVATE_KEY=""
-APPLE_CALLBACK_URL="http://localhost:3001/api/auth/apple/callback"
+APPLE_CALLBACK_URL="http://localhost:3000/api/auth/apple/callback"
 
 # AWS SES (for email verification)
 AWS_REGION="us-east-1"
