Fix Render deployment - add rootDir and fix start command

--- a/backend/config.env
+++ b/backend/config.env
@@ -4,7 +4,8 @@ JWT_EXPIRES_IN="7d"
 # Backend port
 PORT=3000
 NODE_ENV=development
-CORS_ORIGIN="http://localhost:8081"
+# CORS - use comma-separated origins or "*" for development
+CORS_ORIGIN="*"
 N8N_WEBHOOK_SECRET="dailydigest-n8n-webhook-secret"
 
 # App URLs
